Bug 365047 - Okteta turns to be very slow on hex searching
Summary: Okteta turns to be very slow on hex searching
Status: RESOLVED FIXED
Alias: None
Product: okteta
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.18.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-03 20:16 UTC by difazio.salvatore
Modified: 2016-10-25 05:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.20.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description difazio.salvatore 2016-07-03 20:16:54 UTC
This okteta release turns to be very slow on hex searching. I requires minutes to searching whatever into even not very large files (about 10 M Bytes). The same search once requires few seconds.

Reproducible: Always

Steps to Reproduce:
1. load a binary file of 10 M Bytes or more
2. browser into and select the portion you want to searching for
3. try to look for this file portion

Actual Results:  
It seems okteta hanging so, at the first instance, I kill it after many minutes. Then I re-tried
once more time waiting longer (many minutes) and eventual it finished successfully. 

Expected Results:  
Searching should be, as usual, a matter of few second on these not very large files.
Comment 1 Friedrich W. H. Kossebau 2016-10-25 05:27:50 UTC
Git commit c31a665b8fc4be456fd29fc3303b81e21a1cbd87 by Friedrich W. H. Kossebau.
Committed on 25/10/2016 at 05:26.
Pushed by kossebau into branch 'Applications/16.08'.

Workaround slowness of search jobs & Co. by buggy QEventDispatcherGlib

For unknown reasons QCoreApplication::processEvents(flag, maxtime) spins
the whole maxtime with QEventDispatcherGlib, something seems broken in
the event processing.
No idea why any QApplication::processEvents were called with a max time
parameter, so simply switching to the variant with no max time, where no
such bug is experienced.
FIXED-IN: 0.20.3

M  +2    -2    kasten/controllers/view/charsetconversion/charsetconversionjob.cpp
M  +2    -5    kasten/controllers/view/checksum/checksumcalculatejob.cpp
M  +2    -4    kasten/controllers/view/filter/filterjob.cpp
M  +2    -2    kasten/controllers/view/info/createstatisticjob.cpp
M  +2    -4    kasten/controllers/view/print/printjob.cpp
M  +2    -5    kasten/controllers/view/search/searchjob.cpp
M  +2    -2    kasten/controllers/view/stringsextract/extractstringsjob.cpp
M  +1    -1    kasten/core/io/filesystem/bytearrayrawfileconnectjob.cpp
M  +1    -1    kasten/core/io/filesystem/bytearrayrawfileloadjob.cpp
M  +1    -1    kasten/core/io/filesystem/bytearrayrawfilereloadjob.cpp
M  +1    -1    kasten/core/io/filesystem/bytearrayrawfilewritejob.cpp
M  +1    -1    kasten/core/io/filesystem/bytearrayrawfilewritetojob.cpp
M  +1    -1    libs/kasten/controllers/io/copyas/copyascontroller.cpp
M  +1    -1    libs/kasten/controllers/io/insert/insertcontroller.cpp
M  +1    -1    libs/kasten/core/io/filesystem/modelencoderfilesystemexportjob_p.cpp
M  +1    -1    libs/kasten/core/tests/testdocumentfileconnectjob.cpp
M  +1    -1    libs/kasten/core/tests/testdocumentfileloadjob.cpp
M  +1    -1    libs/kasten/core/tests/testdocumentfilereloadjob.cpp
M  +1    -1    libs/kasten/core/tests/testdocumentfilewritejob.cpp
M  +1    -1    libs/kasten/core/tests/testdocumentfilewritetojob.cpp
M  +1    -1    libs/kasten/gui/system/multidocumentstrategy_p.cpp
M  +1    -1    libs/kasten/gui/system/singledocumentstrategy_p.cpp

http://commits.kde.org/okteta/c31a665b8fc4be456fd29fc3303b81e21a1cbd87