Workaround slowness of search jobs & Co. by buggy QEventDispatcherGlib

For unknown reasons QCoreApplication::processEvents(flag, maxtime) spins
the whole maxtime with QEventDispatcherGlib, something seems broken in
the event processing.
No idea why any QApplication::processEvents were called with a max time
parameter, so simply switching to the variant with no max time, where no
such bug is experienced.

BUG: 365047
FIXED-IN: 0.20.3