kasten/core/io/filesystem/bytearrayrawfileloadjob.cpp
@@ -44,7 +44,7 @@ void ByteArrayRawFileLoadJob::startLoadFromFile()
     ByteArrayRawFileLoadThread *loadThread = new ByteArrayRawFileLoadThread( this, file() );
     loadThread->start();
     while( !loadThread->wait(100) )
-        QCoreApplication::processEvents( QEventLoop::ExcludeUserInputEvents | QEventLoop::ExcludeSocketNotifiers, 100 );
+        QCoreApplication::processEvents( QEventLoop::ExcludeUserInputEvents | QEventLoop::ExcludeSocketNotifiers );
 
     ByteArrayDocument* document = loadThread->document();
     qobject_cast<ByteArrayRawFileSynchronizer*>(synchronizer())->setDocument( document );
